--- a/beautyChuSpring/src/main/webapp/view/templates/yun-shopdetail.html
+++ b/beautyChuSpring/src/main/webapp/view/templates/yun-shopdetail.html
@@ -115,7 +115,7 @@
 		<div id='yun-shopcontentdetail'>
 			<pre>{{shop.shopIntro}}
 			{{shop.shopAddr}}
-			{{shopTel}}
+			{{shop.shopTel}}
 </pre>
 
 
@@ -127,7 +127,7 @@
 
 		<div class=buttondiv>
 			<div class="ui black basic button yun-shoppricelist">Price List ></div>
-			<div class="ui black basic button kh-shopmap">지도보기 ></div>
+			<div class="ui black basic button kh-shopmap" data-email="{{shop.email}}">지도보기 ></div>
 			<div class="ui black basic button get-coupon">Get Coupon</div>
 		</div>
 
